Better file structure

--- a/Data/preprocess.ipynb
+++ b/Data/preprocess.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +111,22 @@
     "\n",
     "import os\n",
     "\n",
-    "output_folder = \"_\".join(meme_name.split())\n",
+    "output_folder = \"Processed_Data\" + \"/\"\n",
+    "output_folder += \"_\".join(meme_name.split())\n",
     "if not os.path.isdir(output_folder):\n",
-    "    os.mkdir(output_folder)\n",
+    "    os.makedirs(output_folder)\n",
     "\n",
     "scaled.save(output_folder + \"/\" + \"image.jpg\")\n",
     "with open(output_folder + \"/\" + \"data.json\", \"w\") as f:\n",
     "    json.dump(cleaned_data, f)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
